Fix: QRController修正, swagger追加
